syntax = "proto3";

package todo;

option java_package = "com.example.grpc.todo";
option java_multiple_files = true;

service TodoService {
  rpc GetAllTodos(GetAllTodosRequest) returns (GetAllTodosResponse);
  rpc GetTodo(GetTodoRequest) returns (Todo);
  rpc CreateTodo(CreateTodoRequest) returns (Todo);
  rpc UpdateTodo(UpdateTodoRequest) returns (Todo);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}

message Todo {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message GetAllTodosRequest {
  // Empty request
}

message GetAllTodosResponse {
  repeated Todo todos = 1;
}

message GetTodoRequest {
  int64 id = 1;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  bool completed = 3;
}

message UpdateTodoRequest {
  int64 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
}

message DeleteTodoRequest {
  int64 id = 1;
}

message DeleteTodoResponse {
  bool success = 1;
}